--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,10 +2,32 @@ body {
     margin: auto;
 }
 
-h4 {
+h1 {
     font-family: 'Exo', sans-serif;
     color: white;
+    border-bottom: solid white 2px;
     position: relative;
+    right: -430px;
+    top: -75px;
+    z-index: 4;
+    width: 300px;
+}
+
+hr {
+    border-top: solid white 5px;
+    position: relative;
+    right: -300px;
+    top: -50px;
+    z-index: 2; 
+}
+
+h2 {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 50px;
+    color: crimson;
+    position: relative;
+    right: -300px;
+    top: -50px;
     z-index: 4;
 }
 
@@ -23,4 +45,14 @@ h4 {
     position: relative;
     right: -512px;
     z-index: 4;
+}
+
+#portfoliobtn:hover {
+    background: #777;
+    -webkit-animation: jello-horizontal 1s both;
+    animation: jello-horizontal 1s both;
+}
+
+#aboutMeBox {
+    display: none;
 }
