--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,11 +140,14 @@ h2 {
 #pictureBackground {
     top: 200px;
     width: 300px;
+    height: 400px;
 }
 
 .aboutMePictures {
     position: relative;
-    opacity: 0.5;
+    top: -800px;
+    right: -120px;
+    opacity: 0.7;
     margin: 2px;
     width: 250px;
     height: 300px;
