--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,9 +57,9 @@ h2 {
     display: none;
     z-index: 4;
     position: relative;
-    height: 610px;
+    height: 656px;
     width: 350px;
-    left: -100px;
+    left: -145px;
 }
 
 .navtext {
@@ -98,12 +98,12 @@ h2 {
     display: none;
     overflow-y: auto;
     position: relative;
-    top: -610px;
+    top: -660px;
     right: -175px;
     z-index: 4;
     background:rgba(255,255,255,0.5);
-    height: 610px;
-    width: 925px;
+    height: 660px;
+    width: 1018px;
     	-webkit-animation: scale-in-center 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 	        animation: scale-in-center 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
@@ -121,12 +121,13 @@ h2 {
     right: -100px;
     border-left: solid #696969 4px;
     height: 800px;
+    width: 50px;
 }
 
 .logos {
     position: relative;
     top: -810px;
-    right: -760px;
+    right: -770px;
     width: 50px;
     height: 50px;
     margin: 4px;
@@ -171,6 +172,13 @@ h2 {
     display: none;
     -webkit-animation: tracking-in-expand 0.3s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
     animation: tracking-in-expand 0.3s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+}
+
+#contactText {
+    position: relative;
+    right: -200px;
+    top: -700px;
+    
 }
 
 #resumeBox {
