--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,13 +124,24 @@ h2 {
     width: 50px;
 }
 
-.logos {
-    position: relative;
-    top: -810px;
-    right: -770px;
+.gitLogo {
+    position: fixed;
+    top: 25px;
+    left: 800px;
     width: 50px;
     height: 50px;
     margin: 4px;
+    z-index: 6;
+}
+
+.linkedLogo {
+    position: fixed;
+    top: 25px;
+    left: 875px;
+    width: 50px;
+    height: 50px;
+    margin: 4px;
+    z-index: 6;
 }
 
 #aboutMeBox {
@@ -146,13 +157,24 @@ h2 {
 
 .aboutMePictures {
     position: relative;
-    top: -800px;
-    right: -120px;
-    opacity: 0.7;
-    margin: 2px;
+    top: -700px;
+    right: -180px;
+    opacity: 0.8;
+    margin: 60px 2px 60px 2px;
     width: 250px;
     height: 300px;
 }
+
+#aboutMeText {
+    position: absolute;
+    top: 100px;
+    right: 5px;
+    width: 800px;
+    font-size: 15px;
+    color: #ffffff;
+    opacity: 2.0;
+}
+
 
 #projectBox {
     display: none;
@@ -165,7 +187,7 @@ h2 {
     top: -700px;    
     right: -150px;
     height: 300px;
-    width: 300px;
+    width: 500px;
 }
 
 #contactBox {
@@ -185,4 +207,10 @@ h2 {
     display: none;
     -webkit-animation: tracking-in-expand 0.3s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
     animation: tracking-in-expand 0.3s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+}
+
+#resumePic {
+    position: relative;
+    top: -750px;
+    right: -150px;
 }
