Added Clicky-Game to projects page

--- a/views/projects.html
+++ b/views/projects.html
@@ -56,6 +56,22 @@
                 <a target = "_blank" href = "https://github.com/chrisdavis0375"><img class="gitLogo" src="../assets/images/gitlogo.jpg"></a>
                 <a target = "_blank" href = "https://www.linkedin.com/in/chris-davis-759a99177/"><img class ="linkedLogo" src="../assets/images/linkedinlogo.jpg"></a>
 
+                <a target = "_blank" href = "https://guarded-hamlet-57587.herokuapp.com/"><img id = "clickyPic" src = "../assets/images/Clicky-Game.JPG"></a>
+                <h4  id = "clickyHeader" class = "text-center">Clicky Game</h4>
+                <p id = "clickyText">This short interacive game has a fun way of testing your wits. Do you have a photographic memory?
+                    <br>
+                    <br>
+                    <strong>How it works:</strong>
+                    <br>
+                    Click on an image to start the game and make sure not to click the same image twice! If you can click all 12 images once you win the game, if you click an image twice you lose and the game starts again.
+                    <br>
+                    <br>
+                    <strong>Technologies used:</strong>
+                    <br>
+                    HTML5, CSS, Bootstrap, Javascript, JSON, and Reactjs
+                </p>
+
+
 
             <a target = "_blank" href = "https://chrisdavis0375.github.io/Train-Scheduler/"><img id = "trainPic" src = "../assets/images/Train-Scheduler.jpg.JPG"></a>
             <h4  id = "trainHeader" class = "text-center">Train Scheduler</h4>
