--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -98,20 +98,20 @@
   position: absolute;
   height: 200px;
   width: 400px;
-  top: 150px;
+  top: 650px;
   right: 70px;
   border: solid #777 4px;
   box-shadow: black 4px 4px 4px 4px;
 }
 #trainHeader {
   position: absolute;
-  top: 110px;
+  top: 610px;
   left: 50px;
   width: 400px;
 }
 #trainText {
   position: absolute;
-  top: 150px;
+  top: 650px;
   left: 50px;
   width: 400px;
 }
@@ -120,27 +120,27 @@
   position: absolute;
   height: 200px;
   width: 400px;
-  top: 600px;
+  top: 1100px;
   right: 70px;
   border: solid #777 4px;
   box-shadow: black 4px 4px 4px 4px;
 }
 #genieHeader {
   position: absolute;
-  top: 560px;
+  top: 1060px;
   left: 50px;
   width: 400px;
 }
 #genieText {
   position: absolute;
-  top: 600px;
+  top: 1100px;
   left: 50px;
   width: 400px;
 }
 
 #starWarsHeader {
   position: absolute;
-  top: 1640px;
+  top: 2140px;
   left: 50px;
   width: 400px;
 }
@@ -148,14 +148,14 @@
   position: absolute;
   height: 200px;
   width: 400px;
-  top: 1680px;
+  top: 2180px;
   right: 70px;
   border: solid #777 4px;
   box-shadow: black 4px 4px 4px 4px;
 }
 #starwarsText {
   position: absolute;
-  top: 1680px;
+  top: 2180px;
   left: 50px;
   width: 400px;
 }
@@ -164,7 +164,7 @@
   position: absolute;
   height: 200px;
   width: 400px;
-  top: 1130px;
+  top: 1630px;
   right: 70px;
   border: solid #777 4px;
   box-shadow: black 4px 4px 4px 4px;
@@ -172,14 +172,38 @@
 
 #OnlineDigitalText {
   position: absolute;
-  top: 1130px;
+  top: 1630px;
   left: 50px;
   width: 400px;
 }
 
 #OnlineDigitalHeader {
   position: absolute;
-  top: 1090px;
+  top: 1590px;
+  left: 50px;
+  width: 400px;
+}
+
+#clickyPic {
+  position: absolute;
+  height: 200px;
+  width: 400px;
+  top: 150px;
+  right: 70px;
+  border: solid #777 4px;
+  box-shadow: black 4px 4px 4px 4px;
+}
+
+#clickyText {
+  position: absolute;
+  top: 190px;
+  left: 50px;
+  width: 400px;
+}
+
+#clickyHeader {
+  position: absolute;
+  top: 150px;
   left: 50px;
   width: 400px;
 }
